Removed debug code

--- a/static/templates/pattern.html
+++ b/static/templates/pattern.html
@@ -10,18 +10,18 @@
 		on them to cycle through the colors.</p>
 
 		{{ #save }}
-		<!-- <form id="save-form">
+		<form id="save-form">
 			<p>
 			<label for="save-name">Save the pattern as:</label>
 			<input on-tap="clear-field" class="save-name form-control" id="save-name" type="text" value="{{ name }}" name="save-name"/>
 			</p>
-		</form> -->
+		</form>
 
-		<!-- <button on-tap="save-pattern" id="save-pattern">
+		<button on-tap="save-pattern" id="save-pattern">
 			<img src="/static/images/save.png" class="button-img" id="save" 
 			alt="save pattern"/>
 			<p>Save Online<p>
-		</button> -->
+		</button>
 
 		<button on-tap="download-pattern" id="download-pattern">
 			<img src="/static/images/download.png" class="button-img" id="download" 
